----------------------------Kuda 1.2.2 Release Notes----------------------------
2011 February 11
1. What's New
World Editor
* Templates for particle effects
Kuda Library
* Curve now has the option to specify if particles should rotate with curve or not

2. Bug Fixes
World Editor
Kuda Library
* Bugs in manip, motion, and shape related to transform hierarchy fixed
* Starting angle for manips now expected in degrees rather than radians
* Fixed bug with loading Octane from non-local file

----------------------------Kuda 1.2.1 Release Notes----------------------------
2011 January 10
1. What's New
Kuda Library
* Holding shift while scrolling will truck the camera forward or backward

----------------------------Kuda 1.2.0 Release Notes----------------------------
2010 January 3

1. What's New
World Editor
* A new sidebar has been added to the far right and all tools have been updated to use the new sidebar
* Shapes can be defined and saved in the World Editor
* HUD can be defined and saved in the World Editor
* Manipulations like draggables and turnables can be defined and saved in the World Editor
* Audio effects can be scripted in the World Editor
* LargeGeometry option button to switch on that plugin option
* Fog can be defined
* Motions like translators and rotators can be defined and saved in the World Editor
Kuda Library
* Shapes are now proper Citizens that can send messages and be saved to Octane
* Revised terminology of message dispatch to be more clear (see Migration.txt)
* Multi-page HUD navigation control moved from Hemi to Hext
* Created HUD Theme class for easy display configuration
* Added setSize function for HudPages to manually set their size
* Added a video sample that offers two techniques to do video, one overlays, the other hides the 3d.
* Options to disable zooming and shift-click scanning added to camera
* Functions to programmatically rotate the camera in place or orbit about a point added