@@ -24,12 +24,12 @@
                 view its details.
             </p>
         </div>
-		<h1>Shapes</h1>
-        <div id="mbShapes">
+		<h1 id="mbChildrenTitle"></h1>
+        <div id="mbChildren">
         </div>
     </div>
     <div id="mbTreePane" class="sidebarSection">
-        <h1>Transforms</h1>
+        <h1>Model Browser</h1>
         <div id="mbTreeWrapper">
             <div id="mbtree">
             </div>
